[package]
name = "iron_rose"
version = "0.1.0"
authors = ["Chris Emery <chris@menageriehouse.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fasthash = "0.4.0"
serde = {version = "1.0.125", features = ["derive"]}

[dev-dependencies]
criterion = "0.3"
uuid = {version = "0.8", features = ["v4"]}

[[bench]]
name = "ibf_bench"
harness = false